--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 * {
   font-family: "Yeseva One", serif;
+  margin: 0;
+  padding: 0;
 }
 
 .h-screen {
@@ -14,22 +16,42 @@
 .w-350 {
   width: 350px;
 }
-input {
-  border: 3px solid grey;
+input,
+textarea,
+select {
+  border: 1px solid grey;
   height: 40px;
   width: 100%;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 input:focus {
   outline: none;
   border: 2px solid rgb(211, 142, 142);
 }
+textarea {
+  min-height: 55px;
+  padding-top: 10px;
+}
+
 .primary-contained-btn {
   background-color: #303030;
   border-radius: 0;
-  height: 35px;
-  color: wheat;
+  padding: 0 8px;
+  height: 28px;
+  color: white;
   text-transform: uppercase;
+
+  margin-bottom: 4px;
+}
+.primary-outlined-btn {
+  padding: 0 8px;
+  font-size: 12px;
+  border-radius: 0;
+  height: 28px;
+  background-color: #fff;
+  text-transform: uppercase;
+
+  margin-bottom: 4px;
 }
 .ant-form-item {
   margin-bottom: 10px;
@@ -39,5 +61,5 @@ a {
   text-decoration: none;
 }
 hr {
-  width: 45%;
+  margin: 8px 0;
 }
