--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -14,6 +14,28 @@
   color: #fff;
   padding: 15px;
 }
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+.menu-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.menu-title {
+  font-size: 12px;
+}
+.active-menu-item {
+  background-color: #bdb0b0;
+  color: #0a0a0a;
+}
+
 .content {
   width: 100%;
   display: flex;
@@ -37,6 +59,6 @@
   width: 100%;
   background-color: #fff;
   padding: 15px;
-  border: 1px solid rgb(33, 33, 22);
+  /* border: 1px solid rgb(33, 33, 22); */
   border-radius: 5px;
 }
