--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100vh;
   gap: 20px;
+  overflow: auto;
 }
 .sidebar {
   display: flex;
@@ -12,8 +13,8 @@
   border-radius: 5px;
   background-color: #303030;
   color: #fff;
-  padding: 15px;
 }
+
 .menu {
   display: flex;
   flex-direction: column;
@@ -33,6 +34,8 @@
 }
 .active-menu-item {
   background-color: #bdb0b0;
+  width: 90%;
+  margin: auto;
   color: #0a0a0a;
 }
 
@@ -52,6 +55,9 @@
 
 .logo {
   font-size: 20px;
+  @media (max-width: 390px) {
+    font-size: 15px;
+  }
 }
 
 .body {
@@ -59,6 +65,7 @@
   width: 100%;
   background-color: #fff;
   padding: 15px;
-  /* border: 1px solid rgb(33, 33, 22); */
+  border: 1px solid rgb(33, 33, 22);
   border-radius: 5px;
+  overflow: auto;
 }
